Начинаю размечать css

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Каталог перфораторов</title>
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header class="page-header">
@@ -22,7 +25,6 @@
         <p>+7 (812) 555-05-55</p>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
-
       <div class="user-navigation">
         <ul class="user-navigation-block">
           <li><a href="#">Равшан Джамшутович</a></li>
@@ -34,8 +36,8 @@
         </ul>
       </div>
 
-      <nav class="site-navigation">
-        <ul>
+      <nav class="main-navigation">
+        <ul class="site-navigation">
           <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
