--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header class="page-header">
@@ -31,8 +34,8 @@
         </div>
       </div>
 
-      <nav class="header-bottom">
-        <ul>
+      <nav class="main-navigation">
+        <ul class="site-navigation">
           <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
@@ -47,60 +50,58 @@
 
   <main>
     <section class="features">
-      <div class="container">
-        <h2 class="visually-hidden">Особенности</h2>
-        <div first="first-features">
-          <ul class="feature-items">
-            <li>
-              <div class="feature-item">
-                <p>Материалы</p>
-                <a href="#">На любой вкус</a>
-              </div>
-            </li>
-            <li>
-              <div class="feature-item">
-                <p>Инструменты</p>
-                <a href="#">На все случаи</a>
-              </div>
-            </li>
-            <li>
-              <div class="feature-item">
-                <p>Техника</p>
-                <a href="#">Для стройки</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="last-features">
-          <ul class="feature-items">
-            <li>
-              <div class="feature-item">
-                <p>Скидки 50%</p>
-                <a href="#">На 350 товаров</a>
-              </div>
-            </li>
-            <li>
-              <div class="feature-item">
-                <p>Доставка</p>
-                <a href="#">Бесплатно</a>
-              </div>
-            </li>
-          </ul>
-          <section class="slider">
-            <div class="slide">
-              <p>Перфораторы</p>
-              <p>Настоящие мужские игрушки</p>
-              <img src="img/slide-1.jpg" alt="Перфораторы">
-              <a href="catalog.html">Открыть каталог</a>
+      <h2 class="visually-hidden">Особенности</h2>
+      <div class="first-features">
+        <ul class="feature-items">
+          <li>
+            <div class="feature-item">
+              <p>Материалы</p>
+              <a href="#">На любой вкус</a>
             </div>
-            <div class="slide">
-              <p>Дрели</p>
-              <p>Соседям на радость!</p>
-              <img src="img/slide-2.jpg" alt="Дрели">
-              <a href="catalog.html">Открыть каталог</a>
+          </li>
+          <li>
+            <div class="feature-item">
+              <p>Инструменты</p>
+              <a href="#">На все случаи</a>
             </div>
-          </section>
-        </div>
+          </li>
+          <li>
+            <div class="feature-item">
+              <p>Техника</p>
+              <a href="#">Для стройки</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="last-features">
+        <ul class="feature-items">
+          <li>
+            <div class="feature-item">
+              <p>Скидки 50%</p>
+              <a href="#">На 350 товаров</a>
+            </div>
+          </li>
+          <li>
+            <div class="feature-item">
+              <p>Доставка</p>
+              <a href="#">Бесплатно</a>
+            </div>
+          </li>
+        </ul>
+        <section class="slider">
+          <div class="slide">
+            <p>Перфораторы</p>
+            <p>Настоящие мужские игрушки</p>
+            <img src="img/slide-1.jpg" alt="Перфораторы">
+            <a href="catalog.html">Открыть каталог</a>
+          </div>
+          <div class="slide">
+            <p>Дрели</p>
+            <p>Соседям на радость!</p>
+            <img src="img/slide-2.jpg" alt="Дрели">
+            <a href="catalog.html">Открыть каталог</a>
+          </div>
+        </section>
       </div>
     </section>
 
