--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <div class="contacts">
         <p>+7 (812) 555-05-55</p>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
 
       <div class="authorization">
@@ -49,148 +49,150 @@
   </header>
 
   <main>
-    <section class="features">
-      <h2 class="visually-hidden">Особенности</h2>
-      <div class="first-features">
-        <ul class="feature-items">
-          <li>
-            <div class="feature-item">
-              <p>Материалы</p>
-              <a href="#">На любой вкус</a>
+    <div class="content-top">
+      <section class="features">
+        <h2 class="visually-hidden">Особенности</h2>
+        <div class="first-features">
+          <ul class="feature-items">
+            <li>
+              <div class="feature-item">
+                <p>Материалы</p>
+                <a href="#">На любой вкус</a>
+              </div>
+            </li>
+            <li>
+              <div class="feature-item">
+                <p>Инструменты</p>
+                <a href="#">На все случаи</a>
+              </div>
+            </li>
+            <li>
+              <div class="feature-item">
+                <p>Техника</p>
+                <a href="#">Для стройки</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="last-features">
+          <ul class="feature-items">
+            <li>
+              <div class="feature-item">
+                <p>Скидки 50%</p>
+                <a href="#">На 350 товаров</a>
+              </div>
+            </li>
+            <li>
+              <div class="feature-item">
+                <p>Доставка</p>
+                <a href="#">Бесплатно</a>
+              </div>
+            </li>
+          </ul>
+          <section class="slider">
+            <div class="slide">
+              <p>Перфораторы</p>
+              <p>Настоящие мужские игрушки</p>
+              <img src="img/slide-1.jpg" alt="Перфораторы">
+              <a href="catalog.html">Открыть каталог</a>
             </div>
+            <div class="slide">
+              <p>Дрели</p>
+              <p>Соседям на радость!</p>
+              <img src="img/slide-2.jpg" alt="Дрели">
+              <a href="catalog.html">Открыть каталог</a>
+            </div>
+          </section>
+        </div>
+      </section>
+
+      <section class="popular-items">
+
+        <div class="popular-items-header">
+          <h3>Популярные товары:</h3>
+          <a class="popular-items-link" href="#">Все популярные товары</a>
+        </div>
+
+        <div class="catalog">
+
+          <div class="catalog-item">
+            <img src="img/9000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 9000">
+            <div class="catalog-item-buttons">
+              <a class="item-button-buy" href="#">Купить</a>
+              <a class="item-button-bookmark" href="#">В закладки</a>
+            </div>
+            <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 9000</a>
+            <s class="catalog-item-price">32500 Р.</s>
+            <a class="catalog-item-discount-price" href="#">25500 Р.</a>
+          </div>
+
+          <div class="catalog-item">
+            <img src="img/3000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+            <div class="catalog-item-buttons">
+              <a class="item-button-buy" href="#">Купить</a>
+              <a class="item-button-bookmark" href="#">В закладки</a>
+            </div>
+            <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+            <s class="catalog-item-price">22500 Р.</s>
+            <a class="catalog-item-discount-price" href="#">15500 Р.</a>
+          </div>
+
+          <div class="catalog-item">
+            <img src="img/6000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+            <div class="catalog-item-buttons">
+              <a class="item-button-buy" href="#">Купить</a>
+              <a class="item-button-bookmark" href="#">В закладки</a>
+            </div>
+            <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 6000</a>
+            <s class="catalog-item-price">30500 Р.</s>
+            <a class="catalog-item-discount-price" href="#">25500 Р.</a>
+          </div>
+
+          <div class="catalog-item">
+            <img src="img/2000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+            <div class="catalog-item-buttons">
+              <a class="item-button-buy" href="#">Купить</a>
+              <a class="item-button-bookmark" href="#">В закладки</a>
+            </div>
+            <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 2000</a>
+            <a class="catalog-item-discount-price" href="#">12500 Р.</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="popular-brands">
+        <div class="popular-brands-header">
+          <h2>Популярные производители</h2>
+          <a class="all-brands-link" href="#">Все производители</a>
+        </div>
+        <ul class="popular-brands-list">
+          <li>
+            <a href="#"><img src="img/bosch.jpg" alt="bosch"></a>
           </li>
           <li>
-            <div class="feature-item">
-              <p>Инструменты</p>
-              <a href="#">На все случаи</a>
-            </div>
+            <a href="#"><img src="img/makita.jpg" alt="makita"></a>
           </li>
           <li>
-            <div class="feature-item">
-              <p>Техника</p>
-              <a href="#">Для стройки</a>
-            </div>
+            <a href="#"><img src="img/de-walt.jpg" alt="dewalt"></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/interscol.jpg" alt="interscol"></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/hitachi.jpg" alt="hitachi"></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/lg.jpg" alt="lg"></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/aeg.jpg" alt="aeg"></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/metabo.jpg" alt="metabo"></a>
           </li>
         </ul>
-      </div>
-      <div class="last-features">
-        <ul class="feature-items">
-          <li>
-            <div class="feature-item">
-              <p>Скидки 50%</p>
-              <a href="#">На 350 товаров</a>
-            </div>
-          </li>
-          <li>
-            <div class="feature-item">
-              <p>Доставка</p>
-              <a href="#">Бесплатно</a>
-            </div>
-          </li>
-        </ul>
-        <section class="slider">
-          <div class="slide">
-            <p>Перфораторы</p>
-            <p>Настоящие мужские игрушки</p>
-            <img src="img/slide-1.jpg" alt="Перфораторы">
-            <a href="catalog.html">Открыть каталог</a>
-          </div>
-          <div class="slide">
-            <p>Дрели</p>
-            <p>Соседям на радость!</p>
-            <img src="img/slide-2.jpg" alt="Дрели">
-            <a href="catalog.html">Открыть каталог</a>
-          </div>
-        </section>
-      </div>
-    </section>
-
-    <section class="popular-items">
-
-      <div class="popular-items-header">
-        <h3>Популярные товары:</h3>
-        <a class="popular-items-link" href="#">Все популярные товары</a>
-      </div>
-
-      <div class="catalog">
-
-        <div class="catalog-item">
-          <img src="img/9000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 9000">
-          <div class="catalog-item-buttons">
-            <a class="item-button-buy" href="#">Купить</a>
-            <a class="item-button-bookmark" href="#">В закладки</a>
-          </div>
-          <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 9000</a>
-          <s class="catalog-item-price">32500 Р.</s>
-          <a class="catalog-item-discount-price" href="#">25500 Р.</a>
-        </div>
-
-        <div class="catalog-item">
-          <img src="img/3000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
-          <div class="catalog-item-buttons">
-            <a class="item-button-buy" href="#">Купить</a>
-            <a class="item-button-bookmark" href="#">В закладки</a>
-          </div>
-          <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
-          <s class="catalog-item-price">22500 Р.</s>
-          <a class="catalog-item-discount-price" href="#">15500 Р.</a>
-        </div>
-
-        <div class="catalog-item">
-          <img src="img/6000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
-          <div class="catalog-item-buttons">
-            <a class="item-button-buy" href="#">Купить</a>
-            <a class="item-button-bookmark" href="#">В закладки</a>
-          </div>
-          <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 6000</a>
-          <s class="catalog-item-price">30500 Р.</s>
-          <a class="catalog-item-discount-price" href="#">25500 Р.</a>
-        </div>
-
-        <div class="catalog-item">
-          <img src="img/2000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
-          <div class="catalog-item-buttons">
-            <a class="item-button-buy" href="#">Купить</a>
-            <a class="item-button-bookmark" href="#">В закладки</a>
-          </div>
-          <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 2000</a>
-          <a class="catalog-item-discount-price" href="#">12500 Р.</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="popular-brands">
-      <div class="popular-brands-header">
-        <h2>Популярные производители</h2>
-        <a class="all-brands-link" href="#">Все производители</a>
-      </div>
-      <ul class="popular-brands-list">
-        <li>
-          <a href="#"><img src="img/bosch.jpg" alt="bosch"></a>
-        </li>
-        <li>
-          <a href="#"><img src="img/makita.jpg" alt="makita"></a>
-        </li>
-        <li>
-          <a href="#"><img src="img/de-walt.jpg" alt="dewalt"></a>
-        </li>
-        <li>
-          <a href="#"><img src="img/interscol.jpg" alt="interscol"></a>
-        </li>
-        <li>
-          <a href="#"><img src="img/hitachi.jpg" alt="hitachi"></a>
-        </li>
-        <li>
-          <a href="#"><img src="img/lg.jpg" alt="lg"></a>
-        </li>
-        <li>
-          <a href="#"><img src="img/aeg.jpg" alt="aeg"></a>
-        </li>
-        <li>
-          <a href="#"><img src="img/metabo.jpg" alt="metabo"></a>
-        </li>
-      </ul>
-    </section>
+      </section>
+    </div>
 
     <section class="services">
       <div class="services-header">
