Заканчиваем стилизвцию главной

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
       <section class="popular-brands">
         <div class="popular-brands-header">
-          <h2>Популярные производители</h2>
+          <h3>Популярные производители:</h3>
           <a class="all-brands-link" href="#">Все производители</a>
         </div>
         <ul class="popular-brands-list">
