Переделал базовую стилизацию

--- a/catalog.html
+++ b/catalog.html
@@ -13,26 +13,25 @@
       <a href="#"><img class="header-logo" src="img/logo-head.png" alt="Техномарт"></a>
       <form><input type="search" placeholder="поиск"></form>
       <a class="bookmarks" href="#">Закладки: 0</a>
-      <a class="basket" href="#">Корзина: 10</a>
+      <a class="basket-active" href="#">Корзина: 10</a>
       <a class="checkout" href="#">Оформить заказ</a>
     </div>
 
     <div class="header-middle">
-
       <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-
-      <div class="header-contacts">
-        <p>+7 (812) 555-05-55</p>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      <div class="contacts">
+        <p class="phone">+7 (812) 555-05-55</p>
+        <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
+
       <div class="user-navigation">
         <ul class="user-navigation-block">
           <li><a href="#">Равшан Джамшутович</a></li>
           <li><a href="#">Выход</a></li>
         </ul>
-        <ul>
-          <li><a href="#" class="user-navigation-link">Мои заказы</a></li>
-          <li><a href="#" class="user-navigation-link">Личный кабинет</a></li>
+        <ul class="user-navigation-link">
+          <li><a href="#">Мои заказы</a></li>
+          <li><a href="#">Личный кабинет</a></li>
         </ul>
       </div>
 
@@ -252,15 +251,17 @@
 
   <footer>
     <div class="footer-top">
-      <a href="#"><img class="footer-logo" src="img/logo-footer.png" alt="Техномарт"></a>
+      <div class="container">
+        <a href="#"><img class="footer-logo" src="img/logo-footer.png" alt="Техномарт"></a>
 
-      <ul class="footer-top-navigation">
-        <li><a href="#">Компания</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
+        <ul class="footer-top-navigation">
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </div>
     </div>
 
     <div class="footer-middle">
