--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="header-middle">
       <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <div class="contacts">
-        <p>+7 (812) 555-05-55</p>
+        <p class="phone">+7 (812) 555-05-55</p>
         <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
 
@@ -276,7 +276,7 @@
     <div class="footer-top">
       <div class="container">
         <a href="#"><img class="footer-logo" src="img/logo-footer.png" alt="Техномарт"></a>
-        <ul>
+        <ul class="footer-top-navigation">
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="catalog.html">Каталог</a></li>
@@ -292,7 +292,7 @@
           +7 (812) 555-05-55
         </p>
       </div>
-      <ul>
+      <ul class="footer-middle-navigation"> 
         <li><a href="#">Материалы</a></li>
         <li><a href="#">Техника</a></li>
         <li><a href="#">Инструмент</a></li>
