--- a/catalog.html
+++ b/catalog.html
@@ -123,11 +123,11 @@
     <section class="sorting">
       <h3>Сортировка:</h3>
       <div class="sorting-options">
-        <a href="#" class="sorting-option-price sorting-options-current">По цене</a>
-        <a href="#" class="sorting-option-type">По типу</a>
-        <a href="#" class="sorting-option-function">По функционалу</a>
-        <a class="option-up-arrow option-current" href="#"></a>
-        <a class="option-down-arrow" href="#"></a>
+        <a href="#" class="sorting-option sorting-options-current">По цене</a>
+        <a href="#" class="sorting-option">По типу</a>
+        <a href="#" class="sorting-option">По функционалу</a>
+        <a class="option-arrow option-current" href="#"></a>
+        <a class="option-arrow" href="#"></a>
       </div>
     </section>
 
@@ -294,11 +294,11 @@
 
       <div class="feedback">
         <p>Обратная связь: </p>
-        <a class="footer-feedback-mail" href="#">mail@htmlacademy.ru</a>
+        <a class="footer-link" href="#">mail@htmlacademy.ru</a>
       </div>
       <div class="copyright">
         <p>Разработано - </p>
-        <a class="copyright-site" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+        <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
       </div>
     </div>
   </footer>
