--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
         <h2 class="visually-hidden">Особенности</h2>
         <div class="first-features">
           <ul class="feature-items">
-            <li>
+            <li class="materials">
               <div class="feature-item">
                 <p>Материалы</p>
                 <a href="#">На любой вкус</a>
               </div>
             </li>
-            <li>
+            <li class="instruments">
               <div class="feature-item">
                 <p>Инструменты</p>
                 <a href="#">На все случаи</a>
               </div>
             </li>
-            <li>
+            <li class="tech">
               <div class="feature-item">
                 <p>Техника</p>
                 <a href="#">Для стройки</a>
@@ -76,13 +76,13 @@
         </div>
         <div class="last-features">
           <ul class="feature-items">
-            <li>
+            <li class="sale">
               <div class="feature-item">
                 <p>Скидки 50%</p>
                 <a href="#">На 350 товаров</a>
               </div>
             </li>
-            <li>
+            <li class="delivery">
               <div class="feature-item">
                 <p>Доставка</p>
                 <a href="#">Бесплатно</a>
@@ -195,8 +195,8 @@
     </div>
 
     <section class="services">
-      <div class="services-header">
-        <h2>Сервисы</h2>
+      <div>
+        <h2 class="header-middle">Сервисы</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       </div>
       <div class="services-tabs">
@@ -226,7 +226,7 @@
 
     <section class="info">
       <div class="info-about">
-        <h2>Компания Техномарт</h2>
+        <h2 class="header-middle">Компания Техномарт</h2>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
         <p>Мы можем доставить ваш товар в самые отдаленные точки России!Техномарт работает со многими транспортными компаниями: </p>
         <ul>
@@ -237,7 +237,7 @@
         <a href="#">Подробнее о компании</a>
       </div>
       <div class="info-contacts">
-        <h2>Контакты</h2>
+        <h2 class="header-middle">Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
         <img src="img/map.jpg" alt="map">
         <a href="#">Заблудились? Напишите нам!</a>
@@ -292,7 +292,7 @@
           +7 (812) 555-05-55
         </p>
       </div>
-      <ul class="footer-middle-navigation"> 
+      <ul class="footer-middle-navigation">
         <li><a href="#">Материалы</a></li>
         <li><a href="#">Техника</a></li>
         <li><a href="#">Инструмент</a></li>
@@ -313,11 +313,11 @@
 
       <div class="feedback">
         <p>Обратная связь: </p>
-        <a class="footer-feedback-mail" href="#">mail@htmlacademy.ru</a>
+        <a class="footer-link" href="#">mail@htmlacademy.ru</a>
       </div>
       <div class="copyright">
         <p>Разработано - </p>
-        <a class="copyright-site" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+        <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
       </div>
     </div>
   </footer>
