--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
     </div>
 
     <section class="services">
-      <div>
-        <h2 class="header-middle">Сервисы</h2>
+      <div class="middle-info">
+        <h2>Сервисы</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       </div>
       <div class="services-tabs">
@@ -225,8 +225,8 @@
     </section>
 
     <section class="info">
-      <div class="info-about">
-        <h2 class="header-middle">Компания Техномарт</h2>
+      <div class="middle-info">
+        <h2>Компания Техномарт</h2>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
         <p>Мы можем доставить ваш товар в самые отдаленные точки России!Техномарт работает со многими транспортными компаниями: </p>
         <ul>
@@ -236,8 +236,8 @@
         </ul>
         <a href="#">Подробнее о компании</a>
       </div>
-      <div class="info-contacts">
-        <h2 class="header-middle">Контакты</h2>
+      <div class="middle-info">
+        <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
         <img src="img/map.jpg" alt="map">
         <a href="#">Заблудились? Напишите нам!</a>
