--- a/catalog.html
+++ b/catalog.html
@@ -10,31 +10,37 @@
 <body>
   <header class="page-header">
     <div class="header-top">
-      <a href="#"><img class="header-logo" src="img/logo-head.png" alt="Техномарт"></a>
-      <form><input type="search" placeholder="поиск"></form>
-      <a class="bookmarks" href="#">Закладки: 0</a>
-      <a class="basket-active" href="#">Корзина: 10</a>
-      <a class="checkout" href="#">Оформить заказ</a>
+      <div class="container">
+        <a href="#"><img class="header-logo" src="img/logo-head.png" alt="Техномарт"></a>
+        <form><input type="search" placeholder="поиск"></form>
+        <a class="bookmarks" href="#">Закладки: 0</a>
+        <a class="basket" href="#">Корзина: 0</a>
+        <a class="checkout" href="#">Оформить заказ</a>
+      </div>
     </div>
 
-    <div class="header-middle">
-      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-      <div class="contacts">
-        <p class="phone">+7 (812) 555-05-55</p>
-        <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      </div>
+    <div class="container">
+      <div class="header-middle">
+        <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <div class="contacts">
+          <p class="phone">+7 (812) 555-05-55</p>
+          <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </div>
 
-      <div class="user-navigation">
-        <ul class="user-navigation-block">
-          <li><a href="#">Равшан Джамшутович</a></li>
-          <li><a href="#">Выход</a></li>
-        </ul>
-        <ul class="user-navigation-link">
-          <li><a href="#">Мои заказы</a></li>
-          <li><a href="#">Личный кабинет</a></li>
-        </ul>
+        <div class="user-navigation">
+          <ul class="user-navigation-block">
+            <li><a href="#">Равшан Джамшутович</a></li>
+            <li><a href="#"></a></li>
+          </ul>
+          <ul class="user-navigation-link">
+            <li><a href="#">Мои заказы</a></li>
+            <li><a href="#">Личный кабинет</a></li>
+          </ul>
+        </div>
       </div>
+    </div>
 
+    <div class="container">
       <nav class="main-navigation">
         <ul class="site-navigation">
           <li><a href="index.html">Главная</a></li>
@@ -44,17 +50,18 @@
           <li><a href="#">Спецпредложения</a></li>
           <li><a href="#">Доставка</a></li>
           <li><a href="#">Контакты</a></li>
-        </ul> <!-- Навигация -->
+        </ul>
       </nav>
     </div>
   </header>
 
-  <main class="container">
+  <main class="container content">
+
     <ul class="breadcrumbs">
-      <li><a href="index.html">Главная</a></li>
-      <li><a href="catalog.html">Каталог</a></li>
-      <li><a href="#">Инструмент</a></li>
-      <li class="breadcrumbs-current">Перфораторы</li>
+    <li><a href="index.html">Главная</a></li>
+    <li><a href="catalog.html">Каталог</a></li>
+    <li><a href="#">Инструмент</a></li>
+    <li class="breadcrumbs-current">Перфораторы</li>
     </ul>
 
     <h2 class="page-title">Перфораторы</h2>
@@ -132,8 +139,6 @@
     </section>
 
     <section class="catalog">
-
-      <h2 class="visually-hidden">Список перфораторов</h2>
 
       <div class="catalog-item">
         <img src="img/3000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
@@ -237,23 +242,24 @@
         <li><a href="#">3</a></li>
         <li><a href="#">Следующая</a></li>
       </ul>
-
     </section>
 
-    <section class="product-information">
-      <h3>Пара слов о перфораторах</h3>
-      <p>Перфоратор - универсальный строительный инструмент. Предназначенный для сверления и долбления отверстий в кирпиче, бетоне и камне.
-        Существуют электромеханические и пневматические перфораторы. Современные модели могу выполнять функции дрели, Шуруповерта и отбойного молотка. В
-        Ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
-      </p>
-    </section>
+    <div class="product-information">
+      <div class="container">
+        <h3>Пара слов о перфораторах</h3>
+        <p>Перфоратор - универсальный строительный инструмент. Предназначенный для сверления и долбления отверстий в кирпиче, бетоне и камне.
+          Существуют электромеханические и пневматические перфораторы. Современные модели могу выполнять функции дрели, Шуруповерта и отбойного молотка. В
+          Ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+        </p>
+      </div>
+    </div>
+
   </main>
 
-  <footer>
+  <footer class="footer">
     <div class="footer-top">
       <div class="container">
         <a href="#"><img class="footer-logo" src="img/logo-footer.png" alt="Техномарт"></a>
-
         <ul class="footer-top-navigation">
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
@@ -263,42 +269,43 @@
         </ul>
       </div>
     </div>
-
     <div class="footer-middle">
-      <div class="contacts">
-        <p>
-          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
-          +7 (812) 555-05-55
-        </p>
+      <div class="container">
+        <div class="contacts">
+          <p>
+            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
+            +7 (812) 555-05-55
+          </p>
+        </div>
+        <ul class="footer-middle-navigation">
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+        </ul>
       </div>
-
-      <ul class="footer-middle-navigation">
-        <li><a href="#">Материалы</a></li>
-        <li><a href="#">Техника</a></li>
-        <li><a href="#">Инструмент</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-      </ul>
     </div>
-
     <div class="footer-bottom">
-      <div class="copyright">
-        <p>© 2010–2017 Компания «Техномарт»</p>
-        <p>Все права защищены</p>
-      </div>
+      <div class="container">
+        <div class="copyright">
+          <p>© 2010–2017 Компания «Техномарт»<br>
+          Все права защищены</p>
+        </div>
 
-      <ul class="social">
-        <li><a class="social-button" href="#">Вконтакте</a></li>
-        <li><a class="social-button" href="#">Фейсбук</a></li>
-        <li><a class="social-button" href="#">Инстаграм</a></li>
-      </ul>
+        <ul class="social">
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
 
-      <div class="feedback">
-        <p>Обратная связь: </p>
-        <a class="footer-link" href="#">mail@htmlacademy.ru</a>
-      </div>
-      <div class="copyright">
-        <p>Разработано - </p>
-        <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+        <div class="feedback">
+          <p>Обратная связь: <br>
+          <a class="footer-link" href="#">mail@htmlacademy.ru</a></p>
+        </div>
+        <div class="copyright">
+          <p>Разработано - <br>
+          <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+        </div>
       </div>
     </div>
   </footer>
